add comment to a post
